--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="https://unpkg.com/blocks.css/dist/blocks.min.css" />
 
+<h1 class="block">Solo Hardcore Leveling DevOps</h1>
+
 <h2 class="block">Wednesday, Feb 3, 2021</h2>
 
 <p class="block">
